Add perkenalan diri

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         </nav>
     </header>
     
-    
+    <main>
+        <div class="container" id="perkenalan-diri">
+            <article>
+                <h1>Halo, Saya Dava Daviar</h1>
+                <p>Saya seorang mahasiswa yang memiliki ketertarikan terhadap UI/UX design dan web development</p>
+            </article>
+        </div>
+    </main>
 </body>
 </html>
