--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     </header>
     
     <main>
-        <div class="container" id="perkenalan-diri">
-            <article>
-                <h1>Halo, Saya Dava Daviar</h1>
-                <p>Saya seorang mahasiswa yang memiliki ketertarikan terhadap UI/UX design dan web development</p>
+        <div id="content">
+            <article id="perkenalan">
+                <h2>Halo, saya Dava Daviar</h2>
             </article>
         </div>
     </main>
