--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
     <main>
         <div id="content">
             <article id="perkenalan">
-                <h2>Halo, saya Dava Daviar</h2>
+                <section class="content">
+                    <h2>Halo, saya <span>Dava Daviar</span></h2>
+                    <p>Salam kenal...... Saya Dava Daviar, mahasiswa yang sedang menggeluti bidang UI/UX design, product management dan web development. Saya sedang mempelajari tentang web development mulai dari pembuatan web hingga framework - framework CSS</p>
+                </section>
+                <section class="img-content">
+                    <figure>
+                        <img src="assets/images/profile.jpg" alt="profil">
+                    </figure>
+                </section>
             </article>
         </div>
     </main>
