--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                     </figure>
                 </section>
             </article>
+
+            <article>
+                <section class="">
+                    
+                </section>
+            </article>
         </div>
     </main>
 </body>
