--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="jumbotron">
-            <h1>Selamat Datang di Website Saya</h1>
-            <p>Berikut adalah ringkasan dari pengalaman saya di bidang informasi dan teknologi.</p>
+            <h1>Keep Minimalist</h1>
+            <p>Berikut adalah ringkasan dari pengalaman saya di bidang teknologi informasi, produk dan desain.</p>
         </div>
         <nav>
             <ul>
@@ -38,9 +38,9 @@
                 </section>
             </article>
 
-            <article>
+            <article id="">
                 <section class="">
-                    
+
                 </section>
             </article>
         </div>
