--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <article id="perkenalan">
                 <section class="content">
                     <h2>Halo, saya <span>Dava Daviar</span></h2>
-                    <p>Salam kenal...... Saya Dava Daviar, mahasiswa yang sedang menggeluti bidang UI/UX design, product management dan web development. Saya sedang mempelajari tentang web development mulai dari pembuatan web hingga penggunaan framework - framework CSS untuk pembuatan sebuah web</p>
+                    <p>Salam kenal...... Saya Dava Daviar, mahasiswa yang sedang menggeluti bidang UI/UX design, product management dan web development. Saya sedang mempelajari tentang web development mulai dari pembuatan web hingga penggunaan framework - framework CSS untuk pembuatan sebuah web.</p>
                 </section>
                 <section class="img-content">
                     <figure>
