--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Web Profile | Submission</title>
+    <title>Web Profile | Exercise</title>
 </head>
 
 <body>
 
     <header>
         <div class="jumbotron">
-            <h1>Keep Minimalist</h1>
-            <p>Berikut adalah ringkasan dari pengalaman saya di bidang teknologi informasi, produk dan desain.</p>
+            <h1>Just Keep Minimalist</h1>
+            <p>Summary of my experiences in information technology, product and design below.</p>
         </div>
         <nav>
             <ul>
-                <li><a href="#">Tentang Saya</a></li>
+                <li><a href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
-                <li><a href="#">Kontak</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -28,10 +28,10 @@
         <div id="content">
             <article id="perkenalan">
                 <section class="content">
-                    <h2>Halo, saya <span>Dava Daviar</span></h2>
-                    <p>Salam kenal...... Saya Dava Daviar, mahasiswa yang sedang menggeluti bidang UI/UX design, product management dan web development. Saya sedang mempelajari tentang web development mulai dari pembuatan web hingga penggunaan framework - framework CSS untuk pembuatan sebuah web.</p>
+                    <h2>Hello, I am <span>Dava Daviar</span></h2>
+                    <p>Hi, I am Dava Daviar a UI/UX Designer with 1+ years experiences in UI/UX Design industries and basics coding skill of HTML5, CSS3 (Bootstrap CSS & Tailwind CSS), & Javascript (React.js) with intermediate level. I also have interest in product field such as product management, product development and product design.</p>
 
-                    <a href="#" class="btn-explore">Jelajahi</a>
+                    <a href="#" class="btn">Explore</a>
                 </section>
                 <section class="img-content">
                     <figure>
