Style section highlight skills

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 </section>
             </article>
 
-            <article id="">
-                <section class="">
-
+            <article id="skills-highlight">
+                <section class="big-header">
+                    <h1>UI/UX Design</h1>
                 </section>
             </article>
         </div>
