Styling section skills highlight

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
                 <section class="content">
                     <h2>Hello, I am <span>Dava Daviar</span></h2>
                     <p>Hi, I am Dava Daviar a UI/UX Designer with 1+ years experiences in UI/UX Design industries and basics coding skill of HTML5, CSS3 (Bootstrap CSS & Tailwind CSS), & Javascript (React.js) with intermediate level. I also have interest in product field such as product management, product development and product design.</p>
-
-                    <a href="#" class="btn">Explore</a>
                 </section>
                 <section class="img-content">
                     <figure>
@@ -43,6 +41,9 @@
             <article id="skills-highlight">
                 <section class="big-header">
                     <h1>UI/UX Design</h1>
+                    <h1>Web Development</h1>
+                    <h1>Product Management</h1>
+                    <h1>Product Design</h1>
                 </section>
             </article>
         </div>
