Styling walking highlight

--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
             </article>
 
             <article id="skills-highlight">
-                <section class="big-header">
-                    <h1>UI/UX Design</h1>
-                    <h1>Web Development</h1>
-                    <h1>Product Management</h1>
-                    <h1>Product Design</h1>
+                <section class="container-scroll">
+                    <div class="scroll">
+                        <div>
+                            <h3>UI/UX Design - <span class="text-orange"> Web Development </span> - Product Design - <span class="text-orange"> Product Management</span> - </h3>
+                        </div>
+                        <div>
+                            <h3>UI/UX Design - <span class="text-orange"> Web Development </span> - Product Design - <span class="text-orange"> Product Management</span></h3>
+                        </div>
                 </section>
             </article>
         </div>
