Change infinite styling

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                         </div>
                 </section>
             </article>
+
+            <article>
+                
+            </article>
         </div>
     </main>
 </body>
