--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     
     <main>
         <div id="content">
+
+            <!-- Start : perkeknalan  -->
             <article id="perkenalan">
                 <section class="content">
                     <h2>Hello, I am <span>Dava Daviar</span></h2>
@@ -37,7 +39,11 @@
                     </figure>
                 </section>
             </article>
+            <!-- End : perkenalan -->
 
+            <hr>
+
+            <!-- Start : skills-highlight -->
             <article id="skills-highlight">
                 <section class="container-scroll">
                     <div class="scroll">
@@ -49,7 +55,11 @@
                         </div>
                 </section>
             </article>
+            <!-- End : skills-highlight  -->
 
+            <hr>
+
+            <!--Start : design-projects  -->
             <article id="design-projects">
                 <section>
                     <h2>UI/UX Design Projects </h2>
@@ -90,8 +100,13 @@
                         </div>
                     </div>
                 </section>
-
             </article>
+            <!-- End : design-projects -->
+
+            <hr>
+
+            <!-- Start : -->
+            <!-- End :  -->
         </div>
     </main>
 </body>
