Adding & styling section coding journeys

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <!-- Start : perkeknalan  -->
             <article id="perkenalan">
                 <section class="content">
-                    <h2>Hello, I am <span>Dava Daviar</span></h2>
-                    <p>Hi, I am Dava Daviar a UI/UX Designer with 1+ years experiences in UI/UX Design industries and basics coding skill of HTML5, CSS3 (Bootstrap CSS & Tailwind CSS), & Javascript (React.js) with intermediate level. I also have interest in product field such as product management, product development and product design.</p>
+                    <h2>Hello 👋, I am <span>Dava Daviar</span></h2>
+                    <p>Hi, I am a UI/UX Designer with 1+ years experiences in UI/UX Design industries and basics coding skill of HTML5, CSS3 (Bootstrap CSS & Tailwind CSS), & Javascript (React.js) with intermediate level. I also have interest in product field such as product management, product development and product design.</p>
                 </section>
-                <section class="img-content">
+                <section class="img-profile">
                     <figure>
                         <img src="assets/images/profile.jpg" alt="profil">
                     </figure>
@@ -62,7 +62,7 @@
             <!--Start : design-projects  -->
             <article id="design-projects">
                 <section>
-                    <h2>UI/UX Design Projects </h2>
+                    <h2>UI/UX Design Projects 🎴👨‍💻 </h2>
                 </section>
                
                 <section class="projects-container">
@@ -105,8 +105,21 @@
 
             <hr>
 
-            <!-- Start : -->
-            <!-- End :  -->
+            <!-- Start : web-projects -->
+            <article id="coding-journeys">
+                <section class="img-code">
+                    <figure>
+                        <img src="assets/images/code.png" alt="profil">
+                    </figure>
+                </section>
+                <section class="content">
+                    <h2>About <span>Coding Journeys</span></h2>
+                    <p>My coding journey started in 2020 when the whole world was hit by Covid-19. I didn't have any experience in the coding world at that time, but I was trying to start learning about the basics of web programming. And until now, I'm still learning continuously about web programming. You can visit my github page.</p>
+
+                    <a href="" class="btn">Github Page</a>
+                </section>
+            </article>
+            <!-- End :  web-projects -->
         </div>
     </main>
 </body>
