Fix content padding

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
                 </section>
             </article>
             <!-- End :  web-projects -->
+
+            <hr>
+
+            <!-- Start : framework -->
+            <article>
+                <h2>Frameworks I used</h2>
+            </article>
+            <!-- End : framework -->
         </div>
     </main>
 </body>
