Add section frameworks

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!--Start : design-projects  -->
             <article id="design-projects">
                 <section>
-                    <h2>UI/UX Design Projects 🎴👨‍💻 </h2>
+                    <h2>UI/UX Design <span class="text-orange">Projects</span> 🎴👨‍💻 </h2>
                 </section>
                
                 <section class="projects-container">
@@ -124,8 +124,41 @@
             <hr>
 
             <!-- Start : framework -->
-            <article>
-                <h2>Frameworks I used</h2>
+            <article id="frameworks">
+                <h2>About My <span class="text-orange">Frameworks & Tools</span> ⚙️ 🛠️ </h2>
+
+                <section>
+                    <div class="frameworks-container">
+                        <div class="row-1 flex">
+                            <figure>
+                                <img src="assets/images/bootstrap.png" alt="bootstrap">
+                                <figcaption>Bootstrap</figcaption>
+                            </figure>
+                            <figure>
+                                <img src="assets/images/tailwind.png" alt="bootstrap">
+                                <figcaption>Tailwind</figcaption>
+                            </figure>
+                            <figure>
+                                <img src="assets/images/sass.png" alt="bootstrap">
+                                <figcaption>Sass</figcaption>
+                            </figure>
+                        </div>
+                        <div class="row-2 flex">
+                            <figure>
+                                <img src="assets/images/react.png" alt="bootstrap">
+                                <figcaption>React</figcaption>
+                            </figure>
+                            <figure>
+                                <img src="assets/images/webpack.png" alt="bootstrap">
+                                <figcaption>Webpack</figcaption>
+                            </figure>
+                            <figure>
+                                <img src="assets/images/figma.png" alt="bootstrap">
+                                <figcaption>Figma</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </section>
             </article>
             <!-- End : framework -->
         </div>
