Add responsive navbar

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
             <p>Summary of my experiences in information technology, product and design below.</p>
         </div>
         <nav>
+            <h2 class="logo">Dav.</h2>
             <ul>
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+
+            <div class="menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
     
@@ -129,27 +136,8 @@
 
                 <section>
                     <div class="frameworks-container">
-                        <div class="row-1 flex">
-                            <figure>
-                                <img src="assets/images/bootstrap.png" alt="bootstrap">
-                            </figure>
-                            <figure>
-                                <img src="assets/images/tailwind.png" alt="bootstrap">
-                            </figure>
-                            <figure>
-                                <img src="assets/images/sass.png" alt="bootstrap">
-                            </figure>
-                        </div>
-                        <div class="row-2 flex">
-                            <figure>
-                                <img src="assets/images/react.png" alt="bootstrap">
-                            </figure>
-                            <figure>
-                                <img src="assets/images/webpack.png" alt="bootstrap">
-                            </figure>
-                            <figure>
-                                <img src="assets/images/figma.png" alt="bootstrap">
-                            </figure>
+                        <div class="grid-container">
+
                         </div>
                     </div>
                 </section>
