Add navbar dom function

--- a/index.html
+++ b/index.html
@@ -145,5 +145,7 @@
             <!-- End : framework -->
         </div>
     </main>
+
+    <script src="assets/scripts/navbar.js"></script>
 </body>
 </html>
