Add comments for sign

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 
                 <section>
                     <div class="frameworks-container">
-                        <div class="grid-container">
-
+                        <div class="item-box stroke">
+                            <img src="assets/images/bootstrap.png" alt="bootstrap">
+                            <p>Bootstrap</p>
                         </div>
                     </div>
                 </section>
