--- a/index.html
+++ b/index.html
@@ -136,10 +136,27 @@
 
                 <section>
                     <div class="frameworks-container">
-                        <div class="item-box stroke">
+                        <div class="item-box">
                             <img src="assets/images/bootstrap.png" alt="bootstrap">
                             <p>Bootstrap</p>
                         </div>
+                        <div class="item-box">
+                            <img src="assets/images/webpack.png" alt="webpack">
+                            <p>Webpack</p>
+                        </div>
+                        <div class="item-box">
+                            <img src="assets/images/tailwind.png" alt="tailwind">
+                            <p>Tailwind</p>
+                        </div>
+                        <div class="item-box">
+                            <img src="assets/images/react.png" alt="react">
+                            <p>React.js</p>
+                        </div>
+                        <div class="item-box">
+                            <img src="assets/images/figma.png" alt="figma">
+                            <p>Figma</p>
+                        </div>
+                        
                     </div>
                 </section>
             </article>
