--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
     <title>Web Profile | Exercise</title>
 </head>
 
@@ -42,7 +42,7 @@
                 </section>
                 <section class="img-profile">
                     <figure>
-                        <img src="public/images/profile.jpg" alt="profil">
+                        <img src="/src/images/profile.jpg" alt="profil">
                     </figure>
                 </section>
             </article>
@@ -75,7 +75,7 @@
                 <section class="projects-container">
                     <div class="project-item card">
                         <figure>
-                            <img src="public/images/myduma.jpg" class="img-project" alt="myduma cover">
+                            <img src="/src/images/myduma.jpg" class="img-project" alt="myduma cover">
                         </figure>
                         <div class="item-content">
                             <h3>MyDuma App — Digitizing the conventional umrah process through Smartphone
@@ -86,7 +86,7 @@
                     </div>
                     <div class="project-item card">
                         <figure>
-                            <img src="public/images/xproject.jpg" class="img-project" alt="myduma cover">
+                            <img src="/src/images/xproject.jpg" class="img-project" alt="myduma cover">
                         </figure>
                         <div class="item-content">
                             <h3>XProject 2021 Website — Designing Digital Experience for Ceremony of Informatics Departement Students
@@ -97,7 +97,7 @@
                     </div>
                     <div class="project-item card">
                         <figure>
-                            <img src="public/images/ermas.jpg" class="img-project" alt="myduma cover">
+                            <img src="/src/images/ermas.jpg" class="img-project" alt="myduma cover">
                         </figure>
                         <div class="item-content">
                             <h3>Ermas  Commerce  —  Designing Digital Experience for Ceremony of Informatics Departement Students
@@ -116,7 +116,7 @@
             <article id="coding-journeys">
                 <section class="img-code">
                     <figure>
-                        <img src="public/images/code.png" alt="profil">
+                        <img src="/src/images/code.png" alt="profil">
                     </figure>
                 </section>
                 <section class="content">
@@ -137,23 +137,23 @@
                 <section>
                     <div class="frameworks-container">
                         <div class="item-box">
-                            <img src="public/images/bootstrap.png" alt="bootstrap">
+                            <img src="/src/images/bootstrap.png" alt="bootstrap">
                             <p>Bootstrap</p>
                         </div>
                         <div class="item-box">
-                            <img src="public/images/webpack.png" alt="webpack">
+                            <img src="/src/images/webpack.png" alt="webpack">
                             <p>Webpack</p>
                         </div>
                         <div class="item-box">
-                            <img src="public/images/tailwind.png" alt="tailwind">
+                            <img src="/src/images/tailwind.png" alt="tailwind">
                             <p>Tailwind</p>
                         </div>
                         <div class="item-box">
-                            <img src="public/images/react.png" alt="react">
+                            <img src="/src/images/react.png" alt="react">
                             <p>React.js</p>
                         </div>
                         <div class="item-box">
-                            <img src="public/images/figma.png" alt="figma">
+                            <img src="/src/images/figma.png" alt="figma">
                             <p>Figma</p>
                         </div>
                         
